--- a/admin/composer.json
+++ b/admin/composer.json
@@ -7,9 +7,11 @@
     "require": {
         "php": "^8.0.2",
         "guzzlehttp/guzzle": "^7.2",
+        "haruncpi/laravel-log-reader": "^1.0",
         "laravel/framework": "^9.2",
         "laravel/sanctum": "^2.14.1",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "rap2hpoutre/laravel-log-viewer": "^2.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
